TItles and Buttons css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>TicTacToe</h1>
+            <h1>Tic<span>Tac</span>Toe</h1>
         </div>
 
         <div class="main">
+            <h2>Select: </h2>
             <div class="select-sign">
-                <button type="button">X</button>
-                <button type="button">O</button>
+                <button type="button" id="x-sign">X</button>
+                <button type="button" id="o-sign">O</button>
             </div>
 
             <div class="gameboard">
@@ -30,6 +31,10 @@
                 <div class="board-section"></div>
                 <div class="board-section"></div>
                 <div class="board-section"></div>
+            </div>
+
+            <div class="restart">
+                <button type="button" id="restart">Restart</button>
             </div>
         </div>
 
