--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="icon" href="./images/icon.png";
     <title>TicTacToe</title>
 </head>
 <body>
@@ -15,10 +16,12 @@
         </div>
 
         <div class="main">
-            <h2>Select: </h2>
-            <div class="select-sign">
-                <button type="button" id="x-sign">X</button>
-                <button type="button" id="o-sign">O</button>
+            <div class="selection">
+                <h2>Select: </h2>
+                <div class="select-sign">
+                    <button type="button" id="x-sign">X</button>
+                    <button type="button" id="o-sign">O</button>
+                </div>
             </div>
 
             <div class="gameboard">
