--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="icon" href="./images/icon.png";
+    <link rel="icon" href="./images/icon.png">
     <title>TicTacToe</title>
 </head>
 <body>
