revamped the look

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <div class="main">
             <div class="selection">
-                <h2>Select: </h2>
-                <div class="select-sign">
+                <h2><span id="currnet-plyaer">Player 1</span>, your turn. </h2>
+                <!-- <div class="select-sign">
                     <button type="button" id="x-sign">X</button>
                     <button type="button" id="o-sign">O</button>
-                </div>
+                </div> -->
             </div>
 
             <div class="gameboard">
@@ -36,9 +36,9 @@
                 <div class="board-section">X</div>
             </div>
 
-            <div class="restart">
+            <!-- <div class="restart">
                 <button type="button" id="restart">Restart</button>
-            </div>
+            </div> -->
         </div>
 
         <footer>
