--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div class="board-section">X</div>
             </div>
 
-            <!-- <div class="restart">
+            <div class="restart">
                 <button type="button" id="restart">Restart</button>
-            </div> -->
+            </div>
         </div>
 
         <footer>
