--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
 
         <div class="main">
             <div class="selection">
-                <h2><span id="currnet-plyaer">Player 1</span>, your turn. </h2>
-                <!-- <div class="select-sign">
-                    <button type="button" id="x-sign">X</button>
-                    <button type="button" id="o-sign">O</button>
-                </div> -->
+                <h2><span id="current-player">Player 1</span>, your turn. </h2>
             </div>
 
             <div class="gameboard">
