--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="main">
             <div class="selection">
-                <h2><span id="current-player">Player 1</span>, your turn. </h2>
+                <h2><span id="current-player">Player One</span>, your turn. </h2>
             </div>
 
             <div class="gameboard">
