--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             </div>
 
             <div class="gameboard">
-                <div class="board-section">X</div>
                 <div class="board-section"></div>
                 <div class="board-section"></div>
                 <div class="board-section"></div>
                 <div class="board-section"></div>
                 <div class="board-section"></div>
                 <div class="board-section"></div>
-                <div class="board-section">O</div>
-                <div class="board-section">X</div>
+                <div class="board-section"></div>
+                <div class="board-section"></div>
+                <div class="board-section"></div>
             </div>
 
             <div class="restart">
