--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Tic<span>Tac</span>Toe</h1>
+            <h1>Tic<span id="tac">Tac</span>Toe</h1>
         </div>
 
         <div class="main">
             <div class="selection">
-                <h2><span id="current-player">Player One</span>, your turn. </h2>
+                <h2><span id="current">Player One</span>, your turn. </h2>
             </div>
 
             <div class="gameboard">
